# curlplusplus

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  client.rs  defs.rs  errors.rs  keyboard.rs  main.rs  settings.rs  state.rs  ui.rs
src/keyboard/: main_menu_pane.rs  main_pane.rs  method.rs  request_pane.rs  response_pane.rs  url_input.rs
src/keyboard/main_pane/: request_body.rs  request_headers.rs  response_body.rs  response_data.rs  response_status.rs
src/settings/: themes.rs
src/ui/: animations.rs  components.rs  palette.rs
src/ui/components/: badge.rs  help_bar.rs  input.rs  main_menu_pane.rs  main_pane.rs  method.rs  method_dropdown.rs  request_pane.rs  response_pane.rs  title.rs  url_input.rs
src/ui/components/main_pane/: request_body.rs  request_headers.rs  response_body.rs  response_data.rs  response_status.rs
