[package]
name = "curlplusplus"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
chrono = "0.4.42"
crossterm = "0.29.0"
dirs = "6.0.0"
fern = "0.7.1"
log = "0.4.29"
openapi = "0.1.5"
ratatui = { version = "0.29.0", features = ["serde"] }
reqwest = "0.12.24"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.11"
